# thermal_stereo

./: .gitignore  README.md  README_unified_model.md  analizar_imagenes.py  challenge.py  data.txt  pyproject.toml  unzip.py
challenge_results/: challenge_results.json
models/: models_registry.txt
src/: example.py  main.py  train.py  train_unified.py  visualize.py  visualize_unified.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  models.py  unified_depth_model.py
src/utils/: data_loader.py
